--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,22 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+
+.docs
+
 # C extensions
 *.so
+
+# Node.js / JavaScript
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+.pnpm-debug.log*
+*.tsbuildinfo
+.npm
+.yarn-integrity
 
 # Distribution / packaging
 .Python
