feat: Add comprehensive COON benchmarking suite (Dec 2025)
- Add benchmark framework with compression-efficiency-benchmark.ts
- Add support for multiple LLM providers (Gemini, GLM-4.6, MiniMax)
- Add retry logic with exponential backoff for rate limit handling
- Update README.md with actual benchmark results
- Update BENCHMARK.md with comprehensive analysis report

Key findings:
- 28-33% token reduction on large codebases
- GLM-4.6 achieves 62.5% accuracy (same as Dart baseline!)
- COON + Context maintains accuracy with 30% token savings

Note: Newer SOTA models (GPT-5, Gemini 3, Claude 4) expected to perform better

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,9 @@ ENV/
 env.bak/
 venv.bak/
 
+.history/
+
+
 # IDE
 .vscode/
 .idea/
@@ -90,3 +93,8 @@ ultra_*.txt
 # Internal docs (not for GitHub)
 SETUP_COMPLETE.md
 PROJECT_STRUCTURE.md
+# Temporary/Debug files
+log.txt
+*.log
+debug.txt
+temp.txt
