--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [master, develop]
   pull_request:
     branches: [master]
+  workflow_dispatch:
+    # Allows manual triggering for npm integration tests
 
 jobs:
   python-tests:
@@ -181,3 +183,31 @@ jobs:
         with:
           name: javascript-dist
           path: packages/javascript/dist/
+
+  # Post-publish integration test - runs manually or via workflow dispatch
+  npm-integration-test:
+    name: npm Package Integration Test
+    runs-on: ubuntu-latest
+    # This job can be triggered manually after publishing to npm
+    if: github.event_name == 'workflow_dispatch'
+    
+    defaults:
+      run:
+        working-directory: packages/javascript
+    
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: packages/javascript/package-lock.json
+      
+      - name: Install test dependencies
+        run: npm ci
+      
+      - name: Run npm integration tests
+        run: npm run test:npm-integration
+
