--- a/docs/package.json
+++ b/docs/package.json
@@ -30,7 +30,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.7",
+    "eslint-config-next": "16.1.1",
     "jest": "^29.7.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
